Criação da barra de navegação superior do projeto

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,43 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1 class="bg-red-900">Teste</h1>
-  <i class="fab fa-instagram"></i>
+  <header>
+    <div class="flex fixed bg-black w-full px-3 py-4 md:px-20">
+      <div class="container flex items-center mx-auto">
+        <div>
+          <a href="#">
+            <img src="img/spotify-logo.png" alt="Spotify" class="w-20 md:w-125px">
+          </a>
+        </div>
+        <div class="flex justify-end flex-1 text-white text-3xl md:hidden">
+          <i class="fas fa-bars"></i>
+        </div>
+        <div class="items-end justify-end flex-1 text-white font-bold hidden md:flex">
+          <nav class="felx-1">
+            <ul class="flex justify-end flex-1">
+              <li class="px-4">
+                <a href="#" class="hover:text-hoverspt text-sm">Premium</a>
+              </li>
+              <li class="px-4">
+                <a href="#" class="hover:text-hoverspt text-sm">Ajuda</a>
+              </li>
+              <li class="px-4">
+                <a href="#" class="hover:text-hoverspt text-sm">Baixar</a>
+              </li>
+              <li class="px-4">
+                <span class="border-r border-white"></span>
+              </li>
+              <li class="px-4">
+                <a href="#" class="hover:text-hoverspt text-sm">Inscrever-se</a>
+              </li>
+              <li class="px-4">
+                <a href="#" class="hover:text-hoverspt text-sm">Login</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
