--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clone Spotify</title>
-  <link rel="shortcut" href="img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -55,5 +55,97 @@
       <a href="#" class="bg-green-main hover:bg-white text-purple-main text-sm rounded-full px-10 py-3 uppercase font-bold max-w-xl mx-auto tracking-widest transition duration-500">Obtenha o Spotify Free</a>
     </div>
   </main>
+  <footer>
+    <div class="grid grid-cols-1 md:grid-cols-6 bg-black text-white p-4 md:p-20">
+      <div class="md:col-span-1 pt-10 md:pt-0">
+        <a href="#">
+          <img src="img/spotify-logo.png" alt="Spotify" class="w-20 md:w-132px">
+        </a>
+      </div>
+      <div class="md:col-span-1 pt-10 md:pt-4">
+        <h3 class="uppercase text-gray-500 font-bold text-xs tracking-widest mb-5">Empresa</h3>
+        <ul>
+          <li class="mb-5">
+            <a href="#">Sobre</a>
+          </li>
+          <li class="mb-5">
+            <a href="#">Empregos</a>
+          </li>
+          <li class="mb-5">
+            <a href="#">For the Record</a>
+          </li>
+        </ul>
+      </div>
+      <div class="md:col-span-1 pt-10 md:pt-4">
+        <h3 class="uppercase text-gray-500 font-bold text-xs tracking-widest mb-5">Comunidades</h3>
+        <ul>
+          <li class="mb-5">
+            <a href="#">Para Artistas</a>
+          </li>
+          <li class="mb-5">
+            <a href="#">Desenvolvedores</a>
+          </li>
+          <li class="mb-5">
+            <a href="#">Publicidade</a>
+          </li>
+          <li class="mb-5">
+            <a href="#">Investidores</a>
+          </li>
+          <li class="mb-5">
+            <a href="#">Fornecedores</a>
+          </li>
+        </ul>
+      </div>
+      <div class="md:col-span-1 pt-10 md:pt-4">
+        <h3 class="uppercase text-gray-500 font-bold text-xs tracking-widest mb-5">Links Úteis</h3>
+        <ul>
+          <li class="mb-5">
+            <a href="#">Ajuda</a>
+          </li>
+          <li class="mb-5">
+            <a href="#">Player da Web</a>
+          </li>
+          <li class="mb-5">
+            <a href="#">Aplicativo móvel grátis</a>
+          </li>
+        </ul>
+      </div>
+      <div class="md:col-span-2 pt-10 md:pt-4">
+        <ul class="flex md:justify-end">
+          <li class="flex items-center justify-center text-2xl bg-gray-900 w-12 h-12 rounded-full hover:text-green-main mx-2">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li class="flex items-center justify-center text-2xl bg-gray-900 w-12 h-12 rounded-full hover:text-green-main mx-2">
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li class="flex items-center justify-center text-2xl bg-gray-900 w-12 h-12 rounded-full hover:text-green-main mx-2">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+          </li>
+        </ul>
+      </div>
+      <div class="md:col-span-4 mt-20">
+        <ul>
+          <li class="inline-block text-xs text-gray-600 mr-4">
+            <a href="#">Legal</a>
+          </li>
+          <li class="inline-block text-xs text-gray-600 mr-4">
+            <a href="#">Centro de Privacidade</a>
+          </li>
+          <li class="inline-block text-xs text-gray-600 mr-4">
+            <a href="#">Política de Privacidade</a>
+          </li>
+          <li class="inline-block text-xs text-gray-600 mr-4">
+            <a href="#">Cookies</a>
+          </li>
+          <li class="inline-block text-xs text-gray-600 mr-4">
+            <a href="#">Sobre anúncios</a>
+          </li>
+        </ul>
+      </div>
+      <div class="md:col-span-2 mt-20">
+        <p class="flex justify-end text-gray-500 text-xs">&copy; 2022 Spotify AB</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
